fixed the Squared getting out of container

--- a/style.css
+++ b/style.css
@@ -2,13 +2,14 @@
     margin-top: 40px;
 display: flex;
 flex-wrap: wrap;
-width: 960px;
+width: 600px;
+height: 600px;
 }
 
 
 .squares{
-    width: 40px;
-    height: 40px;
+   /* width: 35.5px;
+    height: 35.5px;*/
     border: 1px solid #000;
 }
 .squares:hover{
